k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcs-ui
  labels:
    app: fcs-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fcs-ui
  template:
    metadata:
      labels:
        app: fcs-ui
    spec:
      containers:
        - name: fcs-ui
          image: __ACR_NAME__.azurecr.io/fcs-ui:__IMAGE_TAG__
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/appsettings.Production.json
              subPath: appsettings.Production.json
      volumes:
        - name: config
          configMap:
            name: fcs-ui-config
