k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fcs-ui
  labels:
    app: fcs-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: fcs-ui
