k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcs-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.conexaosolidaria.com
      secretName: fcs-ui-tls
  rules:
    - host: app.conexaosolidaria.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fcs-ui
                port:
                  number: 80
